# astarte-device-sdk-esp32

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE.md  README.md  REUSE.toml  SECURITY.md  astarte-device-sdk-esp32.doxy  astarte_bson.c  astarte_bson_serializer.c  astarte_credentials.c  astarte_device.c  astarte_hwid.c  astarte_pairing.c  build_samples.sh  format.sh  idf_component.yml  nvkv_store.c  nvkv_store.h  uuid.c
.github/: dependabot.yml
.github/workflows/: build.yaml  clang-format.yaml  docs-workflow.yaml  publish.yaml  reuse-lint.yaml  static.yaml  unit.yaml
.reuse/: dep5
doc/: astarte-device-sdk-esp32.doxy  docmain.dox
examples/: README.md
examples/aggregates/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/aggregates/interfaces/: org.astarteplatform.esp32.examples.DeviceAggregate.json  org.astarteplatform.esp32.examples.ServerAggregate.json
examples/aggregates/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
examples/datastreams/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/datastreams/main/: app_main.c  (+4 more)
examples/encryption/: CMakeLists.txt  Makefile  README.md  partitions_example.csv  sdkconfig.defaults
examples/non_volatile_storage/: CMakeLists.txt  Makefile  README.md  partitions_example.csv  sdkconfig.defaults
examples/properties/: CMakeLists.txt  Makefile  README.md  partitions_example.csv  sdkconfig.defaults
examples/registration/: CMakeLists.txt  Makefile  README.md  partitions_example.csv  sdkconfig.defaults
examples/toggle_led/: CMakeLists.txt  Makefile  README  README.md  partitions_example.csv  sdkconfig.defaults
include/: astarte.h  astarte_bson.h  astarte_bson_deserializer.h  astarte_bson_serializer.h  astarte_bson_types.h  astarte_credentials.h  astarte_device.h  astarte_hwid.h  astarte_interface.h  astarte_list.h  astarte_pairing.h  astarte_uuid.h  uuid.h
include/astarte_device_sdk/: astarte.h  device_id.h  individual.h  interface.h  mapping.h  object.h  pairing.h  result.h  util.h
private/: astarte_linked_list.h  astarte_nvs_key_value.h  astarte_set.h  astarte_storage.h  astarte_zlib.h  bson_deserializer.h  bson_serializer.h  bson_types.h  crypto.h  data_validation.h  http.h  individual_private.h  interface_private.h  mapping_private.h  object_private.h  pairing_private.h  uuid.h
python_scripts/: .pylintrc  generate_interfaces.py  parse_clang_tidy_res.py  requirements.txt  run_clang_tidy.py  setup_clang_tidy.py
src/: astarte_bson.c  astarte_bson_deserializer.c  astarte_bson_serializer.c  astarte_credentials.c  astarte_device.c  astarte_err_to_name.c  astarte_hwid.c  astarte_linked_list.c  astarte_nvs_key_value.c  astarte_pairing.c  astarte_set.c  astarte_storage.c  astarte_uuid.c  astarte_zlib.c  bson_deserializer.c  bson_serializer.c  crypto.c  data_validation.c  device_id.c  http.c  individual.c  interface.c  mapping.c  object.c  pairing.c  result.c  uuid.c
tests/common/: CMakeLists.txt  serialized_bsons.h  test_astarte_bson_deserializer.c  test_astarte_bson_deserializer.h  test_astarte_bson_serializer.c  test_astarte_bson_serializer.h  test_astarte_linked_list.c  test_astarte_linked_list.h  test_astarte_set.c  test_astarte_set.h
tests/host/: CMakeLists.txt  test_uuid.c  test_uuid.h
tests/host_app/: CMakeLists.txt  sdkconfig.defaults
tests/target_app/: CMakeLists.txt  sdkconfig.defaults
(+69 files in other folders)
